--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -1,7 +1,7 @@
 %%%%%% Computing Chapter  %%%%%%%%%%%%%%%%
  
 \setcounter{chapter}{8}
-\chapter{Computing Frontier} 
+\chapter{Computing} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -11,7 +11,7 @@
 
 \input Computing/authorlist.tex
 \begin{center}
-Draft version: October 30, 2013
+Draft version: November 6, 2013
 \end{center}
 %Conveners are also listed separately in authorlist.tex
 
@@ -36,6 +36,7 @@ Draft version: October 30, 2013
 \input Computing/I3-executiveSummary.tex
 \input Computing/I4-executiveSummary.tex
 \input Computing/I5-executiveSummary.tex
+\input Computing/conclusions.tex
 
 \input Computing/bib.tex
 
