Modified table caption to indicate it is for Accelerator Science and moved it above the table.

--- a/SnowmassStyle/Computing/T1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T1-executiveSummary.tex
@@ -144,6 +144,7 @@ computation of these effects with accurate plasma and laser dynamics,
 
 \begin{table}[t]
 \begin{center}
+\caption{Computing needs for Acclerator Science in 10 years.}
 \begin{tabular}{|l|l|} 
  \hline 
  Computation (Mhours) & $15000$ \\ \hline
@@ -155,7 +156,6 @@ computation of these effects with accurate plasma and laser dynamics,
 Shared file-system space (on site) & $6$ PB\\ \hline
 Shared file-system space (distributed, cataloged) & $60$ PB\\ \hline
 \end{tabular}
-\caption{Compute needs in 10 years.}
 \label{tab:CompNeeds}
 \end{center}
 \end{table}
