Implemented a number of Julia's requests including removing bullets in summary.

--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -13,7 +13,7 @@ known method for \emph{ab initio} quantum chromodynamics (QCD) calculations
 with controlled uncertainties, by casting the fundamental equations of QCD
 into a form amenable to high-performance computing.  Thus, facilities for
 numerical lattice gauge theory are an essential theoretical adjunct to the
-experimental high-energy physics program.  Lattice-QCD calculations now play
+experimental high-energy physics program.  Lattice QCD calculations now play
 an essential role in the search for new physics at the Intensity Frontier.
 They provide accurate results for many of the hadronic matrix elements needed
 to realize the potential of present experiments probing the physics of
@@ -64,30 +64,31 @@ Intensity Frontier'' and ``Lattice Gauge Theories at the Energy Frontier''
 \cite{USQCD_IF_whitepaper13,USQCD_EF_whitepaper13}.  These detailed documents
 present a concrete five-year plan for both the collaboration's foremost
 scientific goals and the theoretical, algorithmic, and computational
-strategies for achieving them.  Some of the highest scientific priorities are
+strategies for achieving them.  The highest scientific priorities include
+the following:
 
 \begin{itemize}
 
 \item Improving calculations of hadronic matrix elements involving
-quark-flavor-changing transitions, which are needed to interpret rare kaon
-decay experiments;
+quark-flavor-changing transitions which are needed to interpret rare kaon
+decay experiments
 
 \item Improving calculations of the quark masses $m_c$ and $m_b$ and the
-strong coupling $\alpha_s$, which contribute significant parametric
-uncertainties to Higgs branching fractions;
+strong coupling $\alpha_s$ which contribute significant parametric
+uncertainties to Higgs branching fractions
 
-\item Calculating the nucleon axial form factor, which is needed to improve
+\item Calculating the nucleon axial form factor which is needed to improve
 determinations of neutrino-nucleon cross sections for experiments such as
-LBNE;
+LBNE
 
-\item Calculating the nucleon light- and strange-quark contents, which are
+\item Calculating the nucleon light- and strange-quark contents which are
 needed to make model predictions for the $\mu \to e$ conversion rate at the
 Mu2e experiment and to interpret dark-matter detection experiments in
-which the dark-matter particle scatters off a nucleus; and
+which the dark-matter particle scatters off a nucleus
 
 \item Calculating the hadronic light-by-light contribution to muon $g-2$, which
 is needed to solidify and improve the Standard-Model prediction and interpret
-the upcoming measurement as a search for new physics.
+the upcoming measurement as a search for new physics
 
 \end{itemize}
 
@@ -116,7 +117,7 @@ variety of hardware.  The first type is commodity clusters based on Intel or AMD
 processors and Infiniband networks, which have hundreds of nodes and
 thousands of cores.  A second type is accelerated commodity clusters, similar to the the
 standard clusters but with general purpose graphics processing units (GPUs) or
-Intel many integrated core (MIC) accelerators installed in each server; these
+Intel Many Integrated Core (MIC) accelerators installed in each server; these
 clusters have fewer nodes but typically hundreds of accelerators.  A third type is very
 large scale Cray supercomputers, consisting of thousands of AMD x86 processors
 with a proprietary network, with the newest models also containing thousands
@@ -234,11 +235,8 @@ augmented through grant programs such as SciDAC.
 
 \subsection{Lattice Field Theory Summary}
 
-The main findings of the report are summarized here:
 
-\begin{itemize}
-
-\item Numerical lattice-QCD calculations are needed to interpret many upcoming
+Numerical lattice-QCD calculations are needed to interpret many upcoming
 experimental measurements at the Energy and Intensity Frontiers as tests of
 the Standard Model and new-physics searches.  Nonperturbative hadronic matrix
 elements and fundamental QCD parameters enter the Standard~Model predictions
@@ -247,7 +245,7 @@ and the muon anomalous magnetic moment.  Thus, facilities for numerical
 lattice gauge theory are an essential theoretical compliment to the
 experimental high-energy physics program.
 
-\item The successful accomplishment of USQCD's scientific goals requires
+The successful accomplishment of USQCD's scientific goals requires
 access to both capacity and capability machines, and hence support for both
 leadership-class facilities and dedicated computing clusters.  The combined
 use of supercomputers to generate large suites of gauge fields and to perform
@@ -258,12 +256,10 @@ The successful utilization of future computing resources requires software
 that runs efficiently on new computing architectures, and hence support for
 postdocs and scientific staff to develop lattice gauge theory code.
 
-\item Support of USQCD through hardware and software grants, access to
+Support of USQCD through hardware and software grants, access to
 leadership-class computing facilities, and funding of lab and university
 theorists, is essential to fully capitalize on the enormous investments in the
 DOE's high-energy physics and nuclear-physics experimental programs.
-
-\end{itemize}
 
 Given continued support of the lattice gauge theory effort in the U.S. and
 worldwide, lattice calculations will play a key role in definitively
