--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -4,7 +4,7 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: L.A.T. Bauerdick and S. Gottlieb (Indiana)}\end{large}
+\begin{large} {\bf Conveners: L.A.T. Bauerdick and S. Gottlieb}\end{large}
 
 G. Bell,
 K. Bloom,
