Final version of I2 report (finally)!

--- a/SnowmassStyle/CpF-I2/wgreport.tex
+++ b/SnowmassStyle/CpF-I2/wgreport.tex
@@ -25,7 +25,7 @@
 
 The field of particle physics has become increasingly reliant on large-scale computing resources to address the challenges of analyzing large datasets, completing specialized computations and simulations, and allowing for wide-spread participation of large groups of researchers.  For a variety of reasons, these resources have become more distributed over a large geographic area, and some resources are highly specialized computing machines.
 
-In this report for the Snowmass Computing Frontier Study, we consider several questions about distributed computing and facility infrastructures that could impact future resource requirements and research directions.  Two other efforts to understand these issues during the past year have been major resources for this report.  One was a review conducted by NERSC in November 2012 to determine HEP community computing and storage needs through 2017 (reference it here).  Another was a panel discussion on the future of grid computing held at the Open Science Grid All-Hands Meeting in March 2013~\cite{bib:OSGpanel}.  We thank all of the participants in these discussions for their contributions.
+In this report for the Snowmass Computing Frontier Study, we consider several questions about distributed computing and facility infrastructures that could impact future resource requirements and research directions.  Two other efforts to understand these issues during the past year have been major resources for this report.  One was a review conducted by NERSC in November 2012 to determine HEP community computing and storage needs through 2017~\cite{bib:NERSCreport}.  Another was a panel discussion on the future of grid computing held at the Open Science Grid All-Hands Meeting in March 2013~\cite{bib:OSGpanel}.  We thank all of the participants in these discussions for their contributions.
 
 \section{Current HEP Use of the U.S. National Computing Infrastructure}
 
@@ -355,6 +355,7 @@ We expect that distributed computing and facility infrastructures will continue 
 
 
 \begin{thebibliography}{99}
+\bibitem{bib:NERSCreport} ``Large Scale Computing and Storage Requirements for High Energy Physics,'' Report of the NERSC/HEP/ASCR Requirements Workshop, November 12 and 13, 2012, \url{http://www.nersc.gov/assets/pubs_presos/NERSC-PRR-HEP-2017.pdf}.
 \bibitem{bib:OSGpanel} See \url{https://indico.fnal.gov/conferenceDisplay.py?confId=5610} for presentations from the panel discussion.
 \bibitem{bib:CHEPresources} See for instance G.~Bagliesi {\it et al.}, ``CMS resource utilization and limitations on the grid after the first two years of LHC collisions'', CHEP 2012 proceedings, \url{http://dx.doi.org/10.1088/1742-6596/396/3/032012}.
 \end{thebibliography}
