Final version of the I2 report (finally!)

--- a/SnowmassStyle/CpF-I2/wgreport.tex
+++ b/SnowmassStyle/CpF-I2/wgreport.tex
@@ -355,7 +355,7 @@ We expect that distributed computing and facility infrastructures will continue 
 
 
 \begin{thebibliography}{99}
-\bibitem{bib:NERSCreport} ``Large Scale Computing and Storage Requirements for High Energy Physics,'' Report of the NERSC/HEP/ASCR Requirements Workshop, November 12 and 13, 2012, \url{http://www.nersc.gov/assets/pubs_presos/NERSC-PRR-HEP-2017.pdf}.
+\bibitem{bib:NERSCreport} ``Large Scale Computing and Storage Requirements for High Energy Physics: Target 2017,'' Report of the NERSC/HEP/ASCR Requirements Workshop, November 27 and 28, 2012, \url{http://www.nersc.gov/assets/pubs_presos/NERSC-PRR-HEP-2017.pdf}.
 \bibitem{bib:OSGpanel} See \url{https://indico.fnal.gov/conferenceDisplay.py?confId=5610} for presentations from the panel discussion.
 \bibitem{bib:CHEPresources} See for instance G.~Bagliesi {\it et al.}, ``CMS resource utilization and limitations on the grid after the first two years of LHC collisions'', CHEP 2012 proceedings, \url{http://dx.doi.org/10.1088/1742-6596/396/3/032012}.
 \end{thebibliography}
